--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "GPL-3.0",
   "dependencies": {
     "@discordjs/rest": "^0.4.1",
+    "@napi-rs/canvas": "^0.1.21",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "undici": "^5.2.0"
   }
 }
